--- a/Final/final.css
+++ b/Final/final.css
@@ -11,7 +11,7 @@
     position: absolute;
     width: 55px;
     height: 55px;
-    background: url(facemod,png);
+    background: url(facemod.png);
 }
 
 .ds4 .stick {
